# Rust-CUDA

./: Dockerfile
crates/cuda_builder/src/: lib.rs
crates/cuda_std/src/: cfg.rs  shared.rs
crates/cust/src/: module.rs
crates/cust/src/memory/device/: device_buffer.rs
crates/nvvm/src/: lib.rs  sys.rs
crates/optix/: optix_wrapper.rs
crates/ptx/src/: types.rs
crates/rustc_codegen_nvvm/: build.rs  libintrinsics.bc  libintrinsics.ll
crates/rustc_codegen_nvvm/src/: nvvm.rs  target.rs
examples/cuda/cpu/bench_dgemm/: Cargo.toml  README.md  build.rs
examples/cuda/cpu/bench_dgemm/src/: main.rs
examples/cuda/cpu/gemm/: Cargo.toml  build.rs
examples/cuda/cpu/gemm/src/: main.rs
examples/cuda/gpu/bench_dgemm_gpu/: Cargo.toml
examples/cuda/gpu/bench_dgemm_gpu/src/: lib.rs
examples/cuda/gpu/gemm_gpu/: Cargo.toml
examples/cuda/gpu/gemm_gpu/src/: lib.rs
